@@ -8,6 +8,7 @@
 #include <iterator>
 #include <functional>
 #include <cstring>
+#include <cassert>
 #include <iostream>
 #include <sstream>
 #include <tr1/unordered_map>
@@ -210,12 +211,24 @@ namespace elfutils
       }
     };
 
+    // This is like std::equal_to but for comparing two different types.
     template<typename t1, typename t2>
     struct equal_to : public std::binary_function<t1, t2, bool>
     {
       inline bool operator () (const t1 &a, const t2 &b) const
       {
 	return a == b;
+      }
+    };
+
+    /* On a single type, our equal_to is like std::equal_to, but
+       we short-circuit for the case of matching pointers.  */
+    template<typename T>
+    struct equal_to<T, T> : public std::binary_function<T, T, bool>
+    {
+      inline bool operator () (const T &a, const T &b) const
+      {
+	return &a == &b || a == b;
       }
     };
 
@@ -525,7 +538,8 @@ namespace elfutils
       {
 	return (other._m_hash == _m_hash &&
 		other.size () == _base::size ()
-		&& std::equal (_base::begin (), _base::end (), other.begin ()));
+		&& std::equal (_base::begin (), _base::end (), other.begin (),
+			       equal_to<elt_type, elt_type> ()));
       }
     };
 
@@ -1002,6 +1016,223 @@ namespace elfutils
       {
 	is<value_type> equalator;
 	return add (candidate, equalator);
+      }
+    };
+
+    /* sharing_stack<T> is like std::stack<T>, but copies share list
+       tails to reduce the memory footprint.  Any non-const call to the
+       top method copies the top element so it's no longer shared.
+       So be sure to use const calls for any non-modifying access.
+       The top_const method is a short-hand for a const access to
+       a non-const container.  */
+    template<typename T>
+    class sharing_stack
+    {
+    public:
+      typedef T value_type;
+      typedef size_t size_type;
+      typedef value_type &reference;
+      typedef const value_type &const_reference;
+
+    protected:
+      class element
+      {
+      private:
+	value_type _m_value;
+	element *_m_next;
+	unsigned int _m_count;
+
+      public:
+	inline operator value_type & ()
+	{
+	  return _m_value;
+	}
+
+	inline operator const value_type & () const
+	{
+	  return _m_value;
+	}
+
+	inline element (const value_type &value, element *tail)
+	  : _m_value (value), _m_next (tail), _m_count (1)
+	{
+	  if (_m_next != NULL)
+	    _m_next->acquire ();
+	}
+
+	inline element (const element &other)
+	  : _m_value (other._m_value), _m_next (other._m_next), _m_count (1)
+	{
+	  if (_m_next != NULL)
+	    _m_next->acquire ();
+	}
+
+	inline ~element ()
+	{
+	  if (_m_next != NULL)
+	    _m_next->release ();
+	}
+
+	inline void acquire ()
+	{
+	  assert (_m_count > 0);
+	  ++_m_count;
+	}
+
+	inline void release ()
+	{
+	  assert (_m_count > 0);
+	  if (--_m_count == 0)
+	    delete this;
+	}
+
+	inline element *pop ()
+	{
+	  assert (_m_count > 0);
+	  element *tail = _m_next;
+	  if (--_m_count == 0)
+	    {
+	      _m_next = NULL;
+	      delete this;
+	    }
+	  return tail;
+	}
+
+	inline const element *next () const
+	{
+	  return _m_next;
+	}
+
+	inline bool shared () const
+	{
+	  assert (_m_count > 0);
+	  return _m_count > 1;
+	}
+      };
+
+      element *_m_head;
+      size_type _m_size;
+
+      inline void init (element *head, size_type n)
+      {
+	_m_head = head;
+	_m_size = n;
+	if (_m_head == NULL)
+	  assert (_m_size == 0);
+	else
+	  _m_head->acquire ();
+      }
+
+      inline void fini ()
+      {
+	if (_m_head == NULL)
+	  assert (_m_size == 0);
+	else
+	  _m_head->release ();
+      }
+
+    public:
+      inline bool empty () const
+      {
+	return _m_head == NULL;
+      }
+
+      inline size_type size () const
+      {
+	return _m_size;
+      }
+
+      inline void push (const value_type &value)
+      {
+	_m_head = new element (value, _m_head);
+	++_m_size;
+      }
+
+      inline void pop ()
+      {
+	_m_head = _m_head->pop ();
+	--_m_size;
+      }
+
+      inline const value_type &top () const
+      {
+	assert (_m_head != NULL);
+	return *_m_head;
+      }
+
+      inline const value_type &const_top ()
+      {
+	return const_cast<const sharing_stack *> (this)->top ();
+      }
+
+      inline const value_type &const_top () const
+      {
+	return top ();
+      }
+
+      inline value_type &top ()
+      {
+	element *prev = _m_head;
+	if (prev->shared ())
+	  {
+	    _m_head = new element (*prev);
+	    prev->release ();
+	  }
+	assert (!_m_head->shared ());
+	return *_m_head;
+      }
+
+      inline sharing_stack ()
+	: _m_head (NULL), _m_size (0)
+      {}
+
+      inline sharing_stack (const sharing_stack &other)
+      {
+	init (other._m_head, other._m_size);
+      }
+
+      inline ~sharing_stack ()
+      {
+	fini ();
+      }
+
+      inline sharing_stack &operator= (const sharing_stack &other)
+      {
+	fini ();
+	init (other._m_head, other._m_size);
+	return *this;
+      }
+
+      inline void swap (sharing_stack &other)
+      {
+	std::swap (_m_head, other._m_head);
+	std::swap (_m_size, other._m_size);
+      }
+
+      template<typename pred_type>
+      inline bool equal (const sharing_stack &other,
+			 pred_type &pred, size_type skip = 0) const
+      {
+	if (other.size () != size ())
+	  return false;
+	for (const element *a = _m_head, *b = other._m_head;
+	     a != NULL; a = a->next (), b = b->next ())
+	  if (skip > 0)
+	    --skip;
+	  else if (!pred (*a, *b))
+	    return false;
+	return true;
+      }
+
+      inline bool operator== (const sharing_stack &other) const
+      {
+	equal_to<value_type, value_type> equalator;
+	return equal (other, equalator);
+      }
+
+      inline bool operator!= (const sharing_stack &other) const
+      {
+	return !(*this == other);
       }
     };
 
